@@ -1,4 +1,4 @@
-/* $Id: system-rtl.css,v 1.2 2007/05/30 18:28:13 goba Exp $ */
+/* $Id: system-rtl.css,v 1.3 2007/06/08 06:04:15 dries Exp $ */
 
 .item-list .icon {
   float: left;
@@ -82,4 +82,12 @@ div.teaser-button-wrapper {
 }
 .progress .percentage {
   float: left;
+}
+input.password-field {
+  margin-left: 10px;
+  margin-right: inherit;
+}
+input.password-confirm {
+  margin-left: 10px;
+  margin-right: inherit;
 }
